[package]
name = "adblock-ffi"
version = "0.1.0"
authors = ["Brian R. Bondy <netzen@gmail.com>"]
edition = "2018"

[dependencies]
adblock = { version = "~0.3.2", git = "https://github.com/brave/adblock-rust", rev = "a54fcc29c3d904ffaf438501efe7708caaab4483", default-features = false, features = ["full-regex-handling", "object-pooling"] }
serde_json = "1.0"
libc = "0.2"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "adblock"

[features]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
