[package]
name = "adblock-ffi"
version = "0.1.0"
authors = ["Brian R. Bondy <netzen@gmail.com>"]
edition = "2018"

[dependencies]
adblock = { version = "~0.3.3", git = "https://github.com/brave/adblock-rust", rev = "7be07ff8b22fb523feac4b4f5d8c2f00eaf9a01f", default-features = false, features = ["full-regex-handling", "object-pooling"] }
serde_json = "1.0"
libc = "0.2"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "adblock"

[features]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
