[package]
name = "adblock-ffi"
version = "0.1.0"
authors = ["Brian R. Bondy <netzen@gmail.com>"]
edition = "2018"

[dependencies]
adblock = { version = "~0.3.4", git = "https://github.com/brave/adblock-rust", rev = "c647890b6d065daf98cba540d2232c100698c498", default-features = false, features = ["full-regex-handling", "object-pooling"] }
serde_json = "1.0"
libc = "0.2"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "adblock"

[features]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
