declare_args() {
  brave_chromium_build = true

  # Release channel support.
  # "beta" for beta release.
  # "dev" for dev channel release.
  # "canary" for canary channel release.
  # "" for stable channel release.
  brave_channel = ""

  # Update feed url on MacOS
  brave_feed_url = "http://localhost:9090"

  brave_dsa_file = "dsa_pub.pem"
}
