declare_args() {
  brave_chromium_build = true

  # Release channel support.
  # "beta" for beta release.
  # "dev" for dev channel release.
  # "nightly" for nightly channel release.
  # "" for stable channel release.
  brave_channel = ""

  # Update feed url on MacOS
  # TODO(simonhong): This url is stub. Replace with real update server or your
  # test server.
  brave_feed_url = "http://localhost:9090"

  brave_dsa_file = "dsa_pub.pem"
}
