declare_args() {
  brave_chromium_build = true

  # Release channel support.
  # "beta" for beta release.
  # "dev" for dev channel release.
  # "nightly" for nightly channel release.
  # "" for stable channel release.
  brave_channel = ""

  brave_dsa_file = "dsa_pub.pem"
}

_base_update_url = "https://updates-test.bravesoftware.com/sparkle/Brave-Browser"
_update_channel = brave_channel
if (_update_channel == "") {
  _update_channel = "stable"
}
brave_feed_url = "$_base_update_url/$_update_channel/appcast.xml"
