# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.


brave_locale_source_patterns = [
  "${root_gen_dir}/components/brave_components_strings_",
  "${root_gen_dir}/brave/brave_generated_resources_",
]

brave_locale_deps = [
  "//brave/app:brave_generated_resources_grit",
  "//brave/components/resources:strings",
]
