# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
import("//brave/components/speedreader/common/buildflags/buildflags.gni")

group("storybook") {
  # Depend on any generated JS output that will
  # be imported by any JS code used in any Brave
  # storybook JS.
  # Explicitly defined here so that even when those targets
  # are disabled in a regular brave build due to build flags,
  # they will be generated before storybook is compiled.
  deps = [
    "//brave/components/ai_chat/core/common/mojom:mojom_js",
    "//brave/components/brave_new_tab_ui:mojom_js",
    "//brave/components/brave_news/common:mojom_js",
    "//brave/components/brave_rewards/common/mojom:mojom_js",
    "//brave/components/brave_shields/core/common:mojom_js",
    "//brave/components/brave_vpn/common/mojom:mojom_js",
    "//brave/components/brave_wallet/common:mojom_js",
    "//mojo/public/js:bindings",
    "//mojo/public/js:resources",
  ]

  if (enable_speedreader) {
    deps += [ "//brave/components/speedreader/common:mojom_js" ]
  }
}
