# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/p3a/buildflags.gni")
import("//brave/components/webcompat_reporter/buildflags/buildflags.gni")
import("//build/config/android/rules.gni")

declare_args() {
  brave_android_developer_options_code = ""
}

java_cpp_enum("brave_android_java_enums_srcjar") {
  sources = [
    "//brave/chromium_src/chrome/browser/notifications/notification_handler_impl.h",
    "//brave/components/decentralized_dns/core/constants.h",
  ]
}

java_cpp_template("brave_config_java") {
  sources = [ "//brave/build/android/java/templates/BraveConfig.template" ]
  defines = [
    "BRAVE_ANDROID_DEVELOPER_OPTIONS_CODE=\"$brave_android_developer_options_code\"",
    "BRAVE_ANDROID_P3A_ENABLED=$brave_p3a_enabled",
    "BRAVE_ANDROID_WEBCOMPAT_REPORT_ENDPOINT=\"$webcompat_report_api_endpoint\"",
  ]
}
